Fix the appearance of the scrollbar due to the responsive menu

--- a/SASS/SCSS/Base/globals.scss
+++ b/SASS/SCSS/Base/globals.scss
@@ -2,7 +2,7 @@
 
 body
 {
-    overflow-x: hidden;
+    //overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
