--- a/SASS/SCSS/Components/_header.scss
+++ b/SASS/SCSS/Components/_header.scss
@@ -14,7 +14,7 @@
 
         &:checked ~ ul
         {
-            height: 332px;
+            height: 342px;
 
             border-bottom: solid 3px var(--color-tertiary);
 
@@ -40,10 +40,11 @@
         flex-direction: column;
         align-items: flex-start;
 
-        width: 100%;
+        width: 100vw;
         height: 0;
-        margin: 10px 0;
+        margin: 0;
         padding: 0 0 0 40px;
+        box-sizing: border-box;
 
         background: var(--color-primary);
         border-bottom: solid 0 var(--color-tertiary);
@@ -51,6 +52,14 @@
 
         list-style: none;
         transition: .3s;
+
+        & > .parent-menu-ctn
+        {
+            &:first-child
+            {
+                padding-top: 10px;
+            }
+        }
 
         & .link-menu
         {
@@ -113,7 +122,7 @@
 
             & > #close-menu
             {
-                padding: 10px 0;
+                margin-top: 20px;
 
                 color: var(--color-font);
                 font-size: 1.5rem;
@@ -240,7 +249,6 @@
             align-items: center;
 
             height: fit-content !important;
-            margin: 0;
             padding: 0;
 
             background: none;
